# oidc-sts-bridge

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
examples/lambda/: README.md  exchange.sh  main.py
oidc_sts_bridge/: __init__.py  main.py  utils.py
tests/: test_aws.py  test_exchanger.py  test_jwt.py  test_keystore.py  test_mocks.py  test_utils.py
