[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oidc-sts-bridge"
version = "0.1.0"
description = "Secure OIDC to AWS STS Token Exchange: Validates OIDC JWTs from any Identity Provider (public or private) and exchanges them for AWS temporary credentials, mapping claims to session tags with robust security and performance optimisations."
authors = [{ name = "Neil Smith", email = "neil@nsmith.net" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joserfc",
    "urllib3",
    "boto3",
    "mypy-boto3-sts"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "isort",
    "black",
]

[tool.setuptools]
packages = ["oidc_sts_bridge"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py310']
preview = true
exclude = '''
/(
    \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
